--- a/app.ipynb
+++ b/app.ipynb
@@ -9,7 +9,15 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Đọc dữ liệu từ tệp CSV\n",
+    "data = pd.read_excel(\"gia_nha.xlsx\")\n",
+    "\n",
+    "# Xem 5 dòng đầu tiên của dữ liệu\n",
+    "print(data.head())"
+   ]
   }
  ],
  "metadata": {
